--- a/Respeak/res/layout/activity_listen.xml
+++ b/Respeak/res/layout/activity_listen.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/requestorName"
                 android:layout_weight="1"
                 android:text="@string/requestor_name" />
+            
         </TableRow>
 
         <TableRow>
@@ -35,7 +36,37 @@
                 android:id="@+id/maxRewardAmount"
                 android:layout_weight="1"
                 android:text="@string/max_reward_amount" />
+            
         </TableRow>
+        
+         <TableRow>
+
+            <TextView
+                android:layout_weight="1"
+                android:text="@string/current_recording" />
+
+            <TextView
+                android:id="@+id/currentRecordingSelected"
+                android:layout_weight="1"
+                android:text="@string/current_recording_selected" />
+            
+        </TableRow>
+        
+        
+         <TableRow>
+
+            <TextView
+                android:layout_weight="1"
+                android:text="@string/link" />
+
+            <TextView
+                android:id="@+id/uri"
+                android:autoLink="web"
+                android:linksClickable="true"
+                android:layout_weight="1" />
+            
+        </TableRow>
+        
     </TableLayout>
 
     <Button
