Checking for valid phone number. Phone number keyboard

--- a/Respeak/res/layout/activity_login.xml
+++ b/Respeak/res/layout/activity_login.xml
@@ -18,10 +18,12 @@
         android:textStyle="bold" />
 
     <EditText
+        android:id="@+id/phoneNumberField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_login"
-        android:paddingTop="20dp" />
+        android:paddingTop="20dp" 
+        android:inputType="phone" />
 
     <Button
         android:id="@+id/logInButton"
