--- a/Respeak/res/layout/activity_login.xml
+++ b/Respeak/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
-    tools:context="${relativePackage}.${activityClass}" >
+    tools:context=".LoginActivity" >
 
     <TextView
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:gravity="center"
         android:paddingTop="30dp"
         android:text="@string/app_name"
-        android:textColor="#FF9900"
+        android:textColor="@color/gold"
         android:textSize="40sp"
         android:textStyle="bold" />
 
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textColor="#FF9900"
+            android:textColor="@color/gold"
             android:text="@string/first_time_on_respeak" />
 
         <Button
