--- a/Respeak/res/layout/activity_record.xml
+++ b/Respeak/res/layout/activity_record.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +9,7 @@
         android:id="@+id/recorderPic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/image_recorder_description"
+        android:contentDescription="@string/image_description_recorder"
         android:paddingTop="5dp"
         android:src="@drawable/blue_mic" />
     
@@ -19,8 +19,47 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="0:00"
-        android:textColor="#04cbde"
+        android:textColor="@color/gold"
         android:paddingTop="10dp"
         android:textSize="30sp" />
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        
+        <ImageButton
+            android:id="@+id/recordButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/image_description_record_button"
+            android:background="@null"
+            android:src="@drawable/record" />
+        
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:background="@null"
+            android:text="@string/record" 
+            android:textColor="@color/light_blue"/>
+        
+        <ImageButton
+            android:id="@+id/recorderDoneButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/image_description_record_button"
+            android:background="@null"
+            android:src="@drawable/record" />
+        
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:background="@null"
+            android:text="@string/record"
+            android:textColor="@color/light_blue" />
+        
+     </LinearLayout>
 
 </LinearLayout>
