--- a/Respeak/res/layout/activity_login.xml
+++ b/Respeak/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
+    android:background="@color/dark_gray"
     tools:context=".LoginActivity" >
 
     <TextView
@@ -22,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_login"
+        android:textColor="@color/white"
         android:paddingTop="20dp" 
         android:inputType="phone" />
 
