--- a/Respeak/res/layout/activity_listen.xml
+++ b/Respeak/res/layout/activity_listen.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
+    android:background="@color/white"
     tools:context="com.uw.ictd.respeak.ListenActivity" >
 
     <TableLayout
