Migrated recording code to a fragment

--- a/Respeak/res/layout/activity_record.xml
+++ b/Respeak/res/layout/activity_record.xml
@@ -1,67 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recordFragment"
+    android:name="com.uw.ictd.respeak.RecordFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white"
-    tools:context=".RecordActivity" >
-
-    <ImageView
-        android:id="@+id/recorderPic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/image_description_recorder"
-        android:paddingTop="5dp"
-        android:src="@drawable/blue_mic" />
-
-    <TextView
-        android:id="@+id/audioDurationLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingTop="10dp"
-        android:text="0:00"
-        android:textColor="@color/gold"
-        android:textSize="30sp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center|top"
-        android:paddingTop="10dp"
-        android:orientation="horizontal" >
-
-        <ImageButton
-            android:id="@+id/recordImageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/image_description_record_button"
-            android:background="@drawable/record" />
-
-        <Button
-            android:id="@+id/recordButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:gravity="center_vertical"
-            android:text="@string/record"
-            android:textColor="@color/light_blue" />
-
-        <ImageButton
-            android:id="@+id/doneImageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/image_description_done_button"
-            android:background="@drawable/done_black" />
-
-        <Button
-            android:id="@+id/doneButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:gravity="center_vertical"
-            android:text="@string/done"
-            android:textColor="@color/light_blue" />
-    </LinearLayout>
-
-</LinearLayout>
+    android:layout_height="match_parent" >
+</fragment>
