--- a/Respeak/res/layout/activity_listen.xml
+++ b/Respeak/res/layout/activity_listen.xml
@@ -2,10 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
     android:background="@color/white"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.uw.ictd.respeak.ListenActivity" >
 
     <TableLayout
@@ -104,7 +106,7 @@
 
         <SeekBar
             android:id="@+id/audioProgressBar"
-            android:layout_width="245dp"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
 
@@ -166,11 +168,10 @@
                 android:id="@+id/respeakButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center|left"
                 android:background="@null"
-                android:text="@string/respeak" 
+                android:gravity="center|left"
+                android:text="@string/respeak"
                 android:textColor="@color/light_blue" />
-            
         </TableRow>
     </TableLayout>
 
