--- a/Respeak/res/layout/activity_login.xml
+++ b/Respeak/res/layout/activity_login.xml
@@ -2,10 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
     android:background="@color/dark_gray"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LoginActivity" >
 
     <TextView
@@ -23,9 +25,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_login"
-        android:textColor="@color/white"
-        android:paddingTop="20dp" 
-        android:inputType="phone" />
+        android:inputType="phone"
+        android:paddingTop="20dp"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/logInButton"
@@ -38,21 +40,20 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center|bottom"
-        android:orientation="vertical">
+        android:orientation="vertical" >
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textColor="@color/gold"
-            android:text="@string/first_time_on_respeak" />
+            android:text="@string/first_time_on_respeak"
+            android:textColor="@color/gold" />
 
         <Button
             android:id="@+id/signUpButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/sign_up" />
-        
     </LinearLayout>
 
 </LinearLayout>
