--- a/Respeak/res/layout/activity_record.xml
+++ b/Respeak/res/layout/activity_record.xml
@@ -4,6 +4,10 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".RecordActivity" >
 
     <ImageView
