--- a/Respeak/res/layout/activity_submission_confirmation.xml
+++ b/Respeak/res/layout/activity_submission_confirmation.xml
@@ -4,8 +4,10 @@
     android:layout_height="match_parent"
     android:background="@color/dark_gray"
     android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SubmissionConfirmationActivity" >
 
     <TextView
@@ -61,4 +63,5 @@
             android:layout_height="wrap_content"
             android:text="@string/view_account_balance" />
     </LinearLayout>
+
 </LinearLayout>
