--- a/Respeak/res/layout/activity_training.xml
+++ b/Respeak/res/layout/activity_training.xml
@@ -8,4 +8,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.uw.ictd.respeak.TrainingActivity" >
 
+    <TextView
+        android:id="@+id/trainingText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="15" 
+        android:scrollbars="vertical" />
+
 </LinearLayout>
