--- a/Respeak/res/layout/activity_training.xml
+++ b/Respeak/res/layout/activity_training.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,8 +13,49 @@
         android:id="@+id/trainingText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="15" 
+        android:maxLines="15"
         android:scrollbars="vertical"
         android:textSize="20sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/lighter_gray"
+        android:gravity="center|top"
+        android:orientation="horizontal"
+        android:paddingTop="20dp" >
+
+        <ImageButton
+            android:id="@+id/recordImageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/record"
+            android:contentDescription="@string/image_description_record_button" />
+
+        <Button
+            android:id="@+id/recordButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:gravity="center_vertical"
+            android:text="@string/record"
+            android:textColor="@color/light_blue" />
+
+        <ImageButton
+            android:id="@+id/doneImageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/done_black"
+            android:contentDescription="@string/image_description_done_button" />
+
+        <Button
+            android:id="@+id/doneButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:gravity="center_vertical"
+            android:text="@string/done"
+            android:textColor="@color/light_blue" />
+    </LinearLayout>
 
 </LinearLayout>
