--- a/Respeak/res/layout/activity_training.xml
+++ b/Respeak/res/layout/activity_training.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/whiteBackground"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -13,6 +14,7 @@
         android:id="@+id/trainingText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/lighter_gray"
         android:maxLines="15"
         android:scrollbars="vertical"
         android:textSize="20sp" />
@@ -20,7 +22,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/lighter_gray"
         android:gravity="center|top"
         android:orientation="horizontal"
         android:paddingTop="20dp" >
