Moved gold title style to styles.xml

--- a/Respeak/res/layout/activity_pay_scale.xml
+++ b/Respeak/res/layout/activity_pay_scale.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/dark_gray"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.uw.ictd.respeak.PayScaleActivity"
-    android:color="@color/dark_gray" >
+    tools:context="com.uw.ictd.respeak.PayScaleActivity" >
 
     <TextView
         style="@style/GoldTitle"
