Went back to having separate gold_title.xml style

--- a/Respeak/res/values/styles.xml
+++ b/Respeak/res/values/styles.xml
@@ -23,6 +23,7 @@
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/gold</item>
+        <item name="android:paddingBottom">10dp</item>
     </style>
 
 </resources>
