--- a/Respeak/res/layout/activity_submission.xml
+++ b/Respeak/res/layout/activity_submission.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/your_recording"
+        android:textColor="@color/light_blue"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -61,6 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/original_recording"
+        android:textColor="@color/light_blue"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -108,7 +110,7 @@
         android:text="@string/sounds_good"
         android:textStyle="bold"
         android:textSize="20sp" 
-        android:textColor="@color/light_blue"/>
+        android:textColor="@color/gold"/>
      
      <!-- Sounds Good? Section  -->
      
@@ -135,7 +137,7 @@
                 android:background="@null"
                 android:gravity="center|left"
                 android:text="@string/no_record_again"
-                android:textColor="@color/red" />
+                android:textColor="@color/light_blue" />
         </TableRow>
 
         <TableRow
@@ -156,7 +158,7 @@
                 android:gravity="center|left"
                 android:background="@null"
                 android:text="@string/yes_submit" 
-                android:textColor="@color/green" />
+                android:textColor="@color/light_blue" />
             
         </TableRow>
     </TableLayout>
